<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <mega.privacy.android.app.components.NewGridRecyclerView
        android:id="@+id/file_list_view_browser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnWidth="@dimen/grid_node_item_width"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/mini_audio_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <mega.privacy.android.app.components.scrollBar.FastScroller
        android:id="@+id/fastscroll"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/favourite_progressbar"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/empty_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/empty_hint_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_hearts_glass"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/empty_hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_hint_image"
            android:layout_centerHorizontal="true"
            android:text="@string/homepage_favourites_empty_hint"
            android:textAppearance="@style/TextAppearance.Mega.Body2" />
    </RelativeLayout>

    <androidx.media3.ui.PlayerView
        android:id="@+id/mini_audio_player"
        android:layout_width="match_parent"
        android:layout_height="@dimen/audio_player_mini_controller_height"
        android:background="?attr/colorPrimary"
        android:visibility="gone"
        app:controller_layout_id="@layout/audio_player_control_in_mini_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:player_layout_id="@layout/audio_player_view_controller_only"
        app:surface_type="none" />

</androidx.constraintlayout.widget.ConstraintLayout>