...
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_select_folder" />
        </FrameLayout>

        <ImageView
            android:id="@+id/item_three_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:src="@drawable/ic_dots_vertical_grey"
            app:layout_constraintBottom_toBottomOf="parent"
...
